Add forms for new collection objects on show pages

--- a/app/views/thirds/_third_firsts.html.erb
+++ b/app/views/thirds/_third_firsts.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="third_firsts_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "thirds/third_firsts_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
