--- a/app/views/firsts/_first_seconds.html.erb
+++ b/app/views/firsts/_first_seconds.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="first_seconds_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "firsts/first_seconds_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
