--- a/app/views/seconds/_second_thirds.html.erb
+++ b/app/views/seconds/_second_thirds.html.erb
@@ -26,7 +26,7 @@
     <div class="card-footer">
       <div class="collapse" id="second_thirds_new_form">
         <!-- New associationcollection form start -->
-
+        <%= render partial: "seconds/second_thirds_new_form" %>
         <!-- New associationcollection form end -->
       </div>
     </div>
