--- a/app/views/seconds/_card.html.erb
+++ b/app/views/seconds/_card.html.erb
@@ -7,7 +7,11 @@
     <dl class="mb-1">
       <dt>First</dt>
       <!-- Display first_id start -->
-      <dd><%= second.first_id %></dd>
+      <dd>
+        <% if @second.first.present? %>
+          <%= link_to second.first, second.first %>
+        <% end %>
+      </dd>
       <!-- Display first_id end -->
 
     </dl>
