--- a/app/views/thirds/_card.html.erb
+++ b/app/views/thirds/_card.html.erb
@@ -7,7 +7,11 @@
     <dl class="mb-1">
       <dt>Second</dt>
       <!-- Display second_id start -->
-      <dd><%= third.second_id %></dd>
+      <dd>
+        <% if @third.second.present? %>
+          <%= link_to third.second, third.second %>
+        <% end %>
+      </dd>
       <!-- Display second_id end -->
 
     </dl>
